# mcp-suite

./: .gitignore  README.md
.github/scripts/: tapis_deploy.py  tapis_deploy_langsmith.py
.github/workflows/: build-ckan-mcp.yml  build-gdal-actor.yml  build-langsmith-mcp.yml  test.yml
docs/design/: 2026-06-29-ckan-mcp-server.md  2026-06-29-geo-actor-mcp-server.md
servers/ckan/: .env.example  Dockerfile  README.md  pyproject.toml
servers/ckan/src/dso_ckan_mcp/: __init__.py  audit.py  ckan_client.py  config.py  langsmith_client.py  prompts.py  resources.py  schema_loader.py  server.py  upload.py  validators.py
servers/ckan/src/dso_ckan_mcp/tools/: __init__.py  langsmith.py  read.py  schema.py  validation.py  write.py
servers/ckan/tests/: conftest.py  test_ckan_client.py  test_config.py  test_http_transport.py  test_prompts.py  test_read_tools.py  test_resources.py  test_schema_loader.py  test_schema_tools.py  test_upload.py  test_validation.py  test_write.py
servers/geo/: .env.example  README.md  pyproject.toml  register-actor.sh
servers/geo/gdal-actor/: .dockerignore  Dockerfile  README.md  actor.py  register_to_ckan.py  validators.py
servers/geo/gdal-actor/tests/: local_test.sh  test_validators.py
servers/geo/phase0a/: README.md  check-abaco.sh  exec-actor.sh
servers/geo/src/dso_geo_mcp/: __init__.py  audit.py  ckan_resolve.py  config.py  message.py  server.py  tapis_client.py  validators.py
servers/geo/src/dso_geo_mcp/tools/: __init__.py  metadata.py  status.py  transform.py
servers/geo/tests/: conftest.py  test_ckan_resolve.py  test_http_transport.py  test_message.py  test_tapis_client.py  test_tools.py  test_validators.py
servers/langsmith/: .env.example  Dockerfile  README.md  pyproject.toml
servers/langsmith/src/dso_langsmith_mcp/: config.py  server.py
servers/langsmith/src/dso_langsmith_mcp/tools/: datasets.py  experiments.py  prompts.py  runs.py
servers/langsmith/tests/: conftest.py  test_config.py  test_tools.py
