[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dso-geo-mcp"
version = "0.1.0"
description = "MCP server for DSO geospatial operations — dispatches GDAL work to Tapis Abaco actors"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
]

[project.scripts]
dso-geo-mcp = "dso_geo_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dso_geo_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests that hit a live server (auto-skipped if unreachable)",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
]
