[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dso-langsmith-mcp"
version = "0.1.0"
description = "MCP server for LangSmith — traces, prompts, datasets, and experiments"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "langsmith>=0.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
dso-langsmith-mcp = "dso_langsmith_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dso_langsmith_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests that hit the live LangSmith API (auto-skipped if API key absent)",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
